--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </form>
     </div>
   <header class="header">
-    <img src="./images/logo.svg" class="header__logo" alt="логотип страницы">
+    <img src="./images/Logo.svg" class="header__logo" alt="логотип страницы">
   </header>
   <main>
     <section class="profile">
