--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="page-root">
   <div class="popup">
     <div class="popup__container">
-      <button class="popup__close-button"></button>
+      <button type="button" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form name="edit-form" class="popup__form">
         <input type="text" name="nameInput" class="popup__info popup__info_text_name">
