--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <div class="popup__container">
       <button type="button" id="closeButton-EditProfile" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form name="edit-form" id="popupEditForm" class="popup__form">
-        <input type="text" name="nameInput" placeholder="имя" class="popup__info popup__info_text_name" required>
-        <input type="text" name="jobInput" placeholder="профессия" class="popup__info popup__info_text_job" required>
-        <button type="submit" class="popup__save-button">Сохранить</button>
+      <form name="edit-form" id="popupEditForm" class="popup__form" novalidate>
+        <input type="text" id="inputProfileName" name="nameInput" placeholder="имя" class="popup__info popup__info_text_name" minlength="2" maxlength="40" required>
+        <span class="popup__input" id="inputProfileName-error"></span>
+        <input type="text" id="inputProfileJob" name="jobInput" placeholder="профессия" class="popup__info popup__info_text_job" minlength="2" maxlength="200" required>
+        <span class="popup__input" id="inputProfileJob-error"></span>
+        <button type="submit" class="popup__save-button" disabled>Сохранить</button>
       </form>
     </div>
   </div>
@@ -29,10 +31,12 @@
    <div class="popup__container">
      <button type="button" id="closeButton-AddCard" class="popup__close-button"></button>
      <h3 class="popup__title">Новое место</h3>
-     <form name="edit-form" id="popupAddForm" class="popup__form">
-       <input type="text" name="nameInput" placeholder="Название" class="popup__info popup__info_text_title" required>
-       <input type="text" name="jobInput" placeholder="Ссылка на картинку" class="popup__info popup__info_text_link" required>
-       <button type="submit" class="popup__save-button">Добавить</button>
+     <form name="edit-form" id="popupAddForm" class="popup__form" novalidate>
+       <input type="text" id="inputAddPlace" name="nameInput" placeholder="Название" class="popup__info popup__info_text_title" minlength="2" maxlength="30" required>
+       <span class="popup__input" id="inputAddPlace-error"></span>
+       <input type="url"  id="inputAddLink" name="jobInput" placeholder="Ссылка на картинку" class="popup__info popup__info_text_link" required>
+       <span class="popup__input" id="inputAddLink-error"></span>
+       <button type="submit" class="popup__save-button" disabled>Добавить</button>
      </form>
     </div>
   </div>
@@ -68,6 +72,7 @@
   <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
   </footer>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/constants.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
