--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
+  <script src="scripts/constants.js"></script>
 </head>
 <body class="page-root">
   <div class="popup popup_overlay_black" id="popupShowImg">
@@ -72,8 +73,6 @@
   <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
   </footer>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/constants.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
