Mesto ПР8. Исправление замечаний ревью

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
       <button type="button" id="closeButton-EditProfile" class="popup__close-button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form name="edit-form" id="popupEditForm" class="popup__form" novalidate>
-        <input type="text" id="inputProfileName" name="nameInput" placeholder="имя" class="popup__info popup__info_text_name" minlength="2" maxlength="40" required>
+        <input type="text" id="inputProfileName" name="name" placeholder="имя" class="popup__info popup__info_text_name" minlength="2" maxlength="40" required>
         <span class="popup__input" id="inputProfileName-error"></span>
-        <input type="text" id="inputProfileJob" name="jobInput" placeholder="профессия" class="popup__info popup__info_text_job" minlength="2" maxlength="200" required>
+        <input type="text" id="inputProfileJob" name="about" placeholder="профессия" class="popup__info popup__info_text_job" minlength="2" maxlength="200" required>
         <span class="popup__input" id="inputProfileJob-error"></span>
         <button type="submit" id ="submitEditButton" class="popup__save-button">Сохранить</button>
       </form>
