--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--  <link rel="stylesheet" href="./pages/index.css">-->
   <title>Место</title>
 </head>
 <body class="page-root">
+
   <div class="popup popup_overlay_black" id="popupShowImg">
   <figure class="popup__figure">
-    <button type="button" class="popup__close-button" id="closeButton-popupImg"></button>
+    <button type="button" class="popup__close-button" id="closeButton-popupImg" title="Закрыть"></button>
     <img class="popup__img">
     <figcaption class="popup__figcaption"></figcaption>
   </figure>
   </div>
+
   <div class="popup" id="popupEditProfile">
     <div class="popup__container">
-      <button type="button" id="closeButton-EditProfile" class="popup__close-button"></button>
+      <button type="button" id="closeButton-EditProfile" class="popup__close-button" title="Закрыть"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form name="edit-form" id="popupEditForm" class="popup__form" novalidate>
         <input type="text" id="inputProfileName" name="name" placeholder="имя" class="popup__info popup__info_text_name" minlength="2" maxlength="40" required>
@@ -27,9 +28,10 @@
       </form>
     </div>
   </div>
+
   <div class="popup" id="popupAddCard">
    <div class="popup__container">
-     <button type="button" id="closeButton-AddCard" class="popup__close-button"></button>
+     <button type="button" id="closeButton-AddCard" class="popup__close-button" title="Закрыть"></button>
      <h3 class="popup__title">Новое место</h3>
      <form name="edit-form" id="popupAddForm" class="popup__form" novalidate>
        <input type="text" id="inputAddPlace" name="name" placeholder="Название" class="popup__info popup__info_text_title" minlength="2" maxlength="30" required>
@@ -40,13 +42,36 @@
      </form>
     </div>
   </div>
+
+      <div class="popup" id="popupDelete">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button" title="Закрыть"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <button type="button" class="popup__save-button">Да</button>
+      </div>
+    </div>
+
+  <div class="popup" id="popupEditAvatar">
+    <div class="popup__container">
+      <button type="button" id="closeButton-EditAvatar" class="popup__close-button" title="Закрыть"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form name="edit-form" id="popupEditAvatarForm" class="popup__form" novalidate>
+        <input type="url"  id="inputEditLink" name="link" placeholder="Ссылка на аватар" class="popup__info popup__info_text_link" required>
+        <span class="popup__input" id="inputEditLink-error"></span>
+        <button type="submit" id ="submitEditAvatarButton" class="popup__save-button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+
   <header class="header">
     <img src="<%=require('./images/Logo.svg')%>" class="header__logo" alt="логотип страницы">
   </header>
   <main>
     <section class="profile">
       <div class="profile__left-group">
-        <img src="<%=require('./images/avatar.png')%>" alt="изображение профиля" class="profile__avatar">
+        <div class="profile__avatar">
+          <img src="" alt="изображение профиля" class="profile__avatar-image">
+        </div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button type="button" aria-label="редактировать профиль" class="profile__edit-button"></button>
@@ -63,7 +88,11 @@
         <img id="photoGridImg" class="item__img">
         <div class="item__group-icon">
           <h2 class="item__text"></h2>
-          <button class="item__icon" id="like"></button>
+          <div class="item__like-container">
+            <button class="item__icon" id="like"></button>
+            <div class="item__like-counter"></div>
+          </div>
+
         </div>
       </article>
     </template>
