Mesto ПР9. Правки тестов Яндекса

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     <section class="profile">
       <div class="profile__left-group">
         <div class="profile__avatar">
-          <img src="" alt="изображение профиля" class="profile__avatar-image">
+          <img src="#" alt="изображение профиля" class="profile__avatar-image">
         </div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
