--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <div class="popup__container">
       <button type="button" id="closeButton-EditProfile" class="popup__close-button" title="Закрыть"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form name="edit-form" id="popupEditForm" class="popup__form" novalidate>
+      <form name="editProfileForm" id="popupEditForm" class="popup__form" novalidate>
         <input type="text" id="inputProfileName" name="name" placeholder="имя" class="popup__info popup__info_text_name" minlength="2" maxlength="40" required>
         <span class="popup__input" id="inputProfileName-error"></span>
         <input type="text" id="inputProfileJob" name="about" placeholder="профессия" class="popup__info popup__info_text_job" minlength="2" maxlength="200" required>
@@ -33,7 +33,7 @@
    <div class="popup__container">
      <button type="button" id="closeButton-AddCard" class="popup__close-button" title="Закрыть"></button>
      <h3 class="popup__title">Новое место</h3>
-     <form name="edit-form" id="popupAddForm" class="popup__form" novalidate>
+     <form name="editAddForm" id="popupAddForm" class="popup__form" novalidate>
        <input type="text" id="inputAddPlace" name="name" placeholder="Название" class="popup__info popup__info_text_title" minlength="2" maxlength="30" required>
        <span class="popup__input" id="inputAddPlace-error"></span>
        <input type="url"  id="inputAddLink" name="link" placeholder="Ссылка на картинку" class="popup__info popup__info_text_link" required>
@@ -55,7 +55,7 @@
     <div class="popup__container">
       <button type="button" id="closeButton-EditAvatar" class="popup__close-button" title="Закрыть"></button>
       <h3 class="popup__title">Обновить аватар</h3>
-      <form name="edit-form" id="popupEditAvatarForm" class="popup__form" novalidate>
+      <form name="editAvatarForm" id="popupEditAvatarForm" class="popup__form" novalidate>
         <input type="url"  id="inputEditLink" name="link" placeholder="Ссылка на аватар" class="popup__info popup__info_text_link" required>
         <span class="popup__input" id="inputEditLink-error"></span>
         <button type="submit" id ="submitEditAvatarButton" class="popup__save-button">Сохранить</button>
